--- a/index.html
+++ b/index.html
@@ -19,31 +19,46 @@
 </head>
 
 <body class="font-inter">
-    <main class="w-full h-full">
+    <main>
         <header class="bg-banner bg-no-repeat bg-cover h-[640px]" style="background-image: url(src/img/banner.png);">
-            <div class=" flex justify-between items-center max-w-[1200px] mx-auto w-full pt-8">
+            <div class="flex justify-evenly md:justify-between items-center container w-full pt-8">
+
+                <!-- Logo -->
                 <div>
-                    <img class="w-[120px] h-[120px]" src="src/img/logo.svg" title="O maior do Brasil" alt="Escudo da Champions League">
+                    <img class="w-[120px] h-[120px]" src="src/img/logo.svg" alt="Escudo da Champions League">
                 </div>
+
+                <!-- Itens do Header -->
                 <nav>
                     <ul class="flex gap-x-12">
-                        <li><a class="text-lg text-white" href="#">Início</a></li>
-                        <li><a class="text-lg text-white" href="#">Jogos</a></li>
-                        <li><a class="text-lg text-white" href="#">Títulos</a></li>
-                        <li><a class="text-lg text-white" href="#">História</a></li>
-                        <li><a class="text-lg text-white" href="#">Loja</a></li>
+                        <li><a class="header-item-nav" href="#">Partidas</a></li>
+                        <li><a class="header-item-nav" href="#">Grupos</a></li>
+                        <li><a class="header-item-nav" href="#">História</a></li>
                     </ul>
                 </nav>
-                <div class="flex gap-x-12 items-center">
-                    <a class="text-white text-xl" href="#">Entrar</a>
-                    <a class="bg-gradient-to-r from-light-blue-600 to-magenta-700 hover:shadow-lg hover:shadow-light-blue-600 text-white text-xl rounded py-2 px-4 transition duration-300" href="#">Registre-se</a>
+
+                <!-- Menu Mobile -->
+                <div id="menu" class="block md:hidden">
+                    <div class="flex items-center bg-gradient-to-r from-light-blue-600 to-magenta-700 hover:shadow-lg hover:shadow-light-blue-600 text-white transition duration-300 p-2 rounded gap-x-2 cursor-pointer">
+                        <p>Menu</p>
+                        <div>
+                            <img src="src/img/menu.svg" alt="">
+                        </div>
+                    </div>
                 </div>
+
+                <!-- Botões do Header -->
+                <div class="flex md:gap-x-3 lg:gap-x-12 items-center">
+                    <a class="text-white text-lg hover:scale-[1.07] transition duration-300 hidden md:block" href="#">Login</a>
+                    <a class="bg-gradient-to-r from-light-blue-600 to-magenta-700 hover:shadow-lg hover:shadow-light-blue-600 text-white text-lg rounded py-2 px-4 transition duration-300 hidden md:block" href="#">UEFA.tv</a>
+                </div>
+
             </div>
-            <article class="flex items-center max-w-[1200px] mx-auto h-[63vh]">
+            <article class="flex justify-center md:justify-start items-center container h-[61vh]">
                 <div>
-                    <h1 class="text-white font-bold text-7xl italic">MATA-MATA</h1>
-                    <p class="max-w-[720px] text-white py-5">Começou a emocionante fase mata-mata da Champions League, onde a competição atinge seu ápice. Os melhores clubes europeus agora se enfrentam em jogos eliminatórios intensos em busca do título mais desejado do futebol continental.</p>
-                    <button class="bg-gradient-to-r from-light-blue-600 to-magenta-700 hover:shadow-lg hover:shadow-light-blue-600 text-white text-xl rounded py-2 px-4 transition duration-300">Ler matéria</button>
+                    <h1 class="text-white font-bold text-6xl sm:text-7xl italic">MATA-MATA</h1>
+                    <p class="max-w-[350px] sm:max-w-[500px] md:max-w-[600px] lg:max-w-[620px] xl:max-w-[720px] text-white py-5">Começou a emocionante fase mata-mata da Champions League, onde a competição atinge seu ápice. Os melhores clubes europeus agora se enfrentam em jogos eliminatórios intensos em busca do título mais desejado do futebol continental.</p>
+                    <button class="bg-gradient-to-r from-light-blue-600 to-magenta-700 hover:shadow-lg hover:shadow-light-blue-600 text-white text-xl rounded py-2 px-8 transition duration-300">Ler matéria</button>
                 </div>
             </article>
         </header>
