feat: adição de códigos CSS e imagens

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- Inclusão do Tailwind CSS -->
     <link rel="stylesheet" href="dist/output.css">
 
+    <!-- Inclusão do CSS -->
+    <link rel="stylesheet" href="src/css/style.css">
+
     <!-- Inclusão do Favicon -->
     <link rel="shortcut icon" href="src/img/logo.svg" type="image/x-icon">
 
@@ -19,6 +22,7 @@
 </head>
 
 <body class="font-inter">
+
     <main>
         <header class="header-background">
             <div class="header-container container">
@@ -68,6 +72,7 @@
             </article>
         </header>
     </main>
+
 </body>
 
 </html>
