feat(layout): adicionado responsividade ao layout e imagens

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <header class="header-background">
             <div class="header-container container">
 
-                <!-- Logo -->
+                <!-- LOGO -->
                 <div>
                     <img class="w-[120px] h-[120px]" src="src/img/logo.svg" alt="Escudo da Champions League">
                 </div>
@@ -47,22 +47,22 @@
                     <a class="button-header py-2 px-4" href="#">UEFA.tv</a>
                 </div>
 
-                <!-- Menu Mobile -->
+                <!-- MENU MOBILE -->
                 <div id="menu" class="block md:hidden">
                     <div class="container-menu">
                         <h2>Menu</h2>
                         <div class="flex flex-col items-end gap-y-0.5">
-                            <div class="line-menu"></div>
-                            <div class="line-menu"></div>
-                            <div class="line-menu"></div>
-                            <div class="line-menu"></div>
+                            <div class="line-menu-18"></div>
+                            <div class="line-menu-14"></div>
+                            <div class="line-menu-18"></div>
+                            <div class="line-menu-14"></div>
                         </div>
                     </div>
                 </div>
 
             </div>
 
-            <!-- Notícia principal -->
+            <!-- MAIN NEWS -->
             <article class="container-article container">
                 <div>
                     <h1 class="text-white font-bold text-4xl xs:text-[64px] sm:text-7xl italic">MATA-MATA</h1>
@@ -73,6 +73,33 @@
         </header>
     </main>
 
+    <!-- GAME RESULT -->
+    <section class="h-[200px]">
+        <div class="flex flex-col sm:flex-row justify-center items-center w-full h-full sm:gap-x-4">
+
+            <div class="container-team">
+                <p class="text-teams">Real Madrid</p>
+                <img class="size-teams" src="src/img/real-madrid.png" alt="Escudo do Real Madrid">
+            </div>
+
+            <div class="flex py-2 md:py-0">
+                <p class="size-scoreboard">7</p>
+                <span class="size-scoreboard text-neutral-800">-</span>
+                <p class="size-scoreboard">0</p>
+            </div>
+
+            <div class="container-team gap-x-1">
+                <img class="size-teams order-2 xs:order-1" src="src/img/barcelona.png" alt="Escudo do Barcelona">
+                <p class="text-teams order-1">Barcelona</p>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- 
+        Dar os devidos créditos para os criadores dos Ícones
+        <a href="https://www.flaticon.com/br/icones-gratis/barcelona" title="barcelona ícones">Barcelona ícones criados por Freepik - Flaticon</a> 
+    -->
 </body>
 
 </html>
