feat: nova seção e imagem adicionadas

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
             <div class="flex py-2 md:py-0">
                 <p class="size-scoreboard">7</p>
-                <span class="size-scoreboard text-neutral-800">-</span>
+                <span class="size-scoreboard text-neutral-700">-</span>
                 <p class="size-scoreboard">0</p>
             </div>
 
@@ -93,6 +93,20 @@
                 <p class="text-teams order-1">Barcelona</p>
             </div>
 
+        </div>
+    </section>
+
+    <!--  -->
+    <section class="container-welcome">
+        <div class="card-welcome">
+            <div>
+                <h1 class="title-welcome">BEM-VINDO À UEFA CHAMPIONS LEAGUE</h1>
+            </div>
+            <div class="flex flex-col gap-y-2">
+                <p class="text-welcome">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto assumenda molestiae fuga excepturi fugiat at similique perspiciatis nam labore quisquam minus culpa, nemo nihil sed ducimus delectus! Eveniet, temporibus accusamus?</p>
+                <p class="text-welcome">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, eveniet quaerat, ipsa eos, debitis corporis obcaecati amet ex est fugit aliquam vero facere sequi quis quos nisi reprehenderit beatae ipsum.</p>
+                <span class="font-bold text-light-blue-600 text-xl cursor-pointer pt-5">LER MAIS</span>
+            </div>
         </div>
     </section>
 
