feat: adição de JavaScript e otimização no código

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UEFA Champions League</title>
 
-    <!-- Inclusão do Tailwind CSS -->
+    <!-- Tailwind CSS -->
     <link rel="stylesheet" href="dist/output.css">
 
-    <!-- Inclusão do CSS -->
+    <!-- CSS -->
     <link rel="stylesheet" href="src/css/style.css">
+
+    <!-- JS -->
+    <script defer src="src/js/main.js"></script>
 
     <!-- Inclusão do Favicon -->
     <link rel="shortcut icon" href="src/img/logo.svg" type="image/x-icon">
@@ -103,9 +106,10 @@
                 <h1 class="title-welcome">BEM-VINDO À UEFA CHAMPIONS LEAGUE</h1>
             </div>
             <div class="flex flex-col gap-y-2">
-                <p class="text-welcome">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto assumenda molestiae fuga excepturi fugiat at similique perspiciatis nam labore quisquam minus culpa, nemo nihil sed ducimus delectus! Eveniet, temporibus accusamus?</p>
-                <p class="text-welcome">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, eveniet quaerat, ipsa eos, debitis corporis obcaecati amet ex est fugit aliquam vero facere sequi quis quos nisi reprehenderit beatae ipsum.</p>
-                <span class="font-bold text-light-blue-600 text-xl cursor-pointer pt-5">LER MAIS</span>
+                <p class="text-welcome">A UEFA Champions League é mais do que um torneio de futebol. É uma celebração da paixão, habilidade e competição que eleva o esporte a um nível superior. Desde a sua criação, a Champions League tem sido o palco onde os melhores clubes da Europa se encontram para competir pelo título mais prestigioso do futebol de clubes.</p>
+                <p class="text-welcome">Times lendários como o Real Madrid, Barcelona, Bayern de Munique, Manchester United, AC Milan, entre outros, têm deixado a sua marca na história deste torneio, contribuindo para a construção de rivalidades e momentos inesquecíveis.</p>
+                <p id="text" class="text-welcome hidden">Bem-vindo à UEFA Champions League, onde a história é escrita a cada temporada, onde os sonhos se tornam realidade e onde a magia do futebol nunca termina.</p>
+                <span id="btnHiddenText" class="font-bold text-light-blue-600 text-xl cursor-pointer pt-5">LER MAIS</span>
             </div>
         </div>
     </section>
