style: seção 'últimas notícias' estilizada

--- a/index.html
+++ b/index.html
@@ -99,19 +99,57 @@
         </div>
     </section>
 
-    <!--  -->
+    <!-- WELCOME -->
     <section class="container-welcome">
         <div class="card-welcome">
             <div>
-                <h1 class="title-welcome">BEM-VINDO À UEFA CHAMPIONS LEAGUE</h1>
+                <h1 class="title">BEM-VINDO À UEFA CHAMPIONS LEAGUE</h1>
             </div>
             <div class="flex flex-col gap-y-2">
                 <p class="text-welcome">A UEFA Champions League é mais do que um torneio de futebol. É uma celebração da paixão, habilidade e competição que eleva o esporte a um nível superior. Desde a sua criação, a Champions League tem sido o palco onde os melhores clubes da Europa se encontram para competir pelo título mais prestigioso do futebol de clubes.</p>
                 <p class="text-welcome">Times lendários como o Real Madrid, Barcelona, Bayern de Munique, Manchester United, AC Milan, entre outros, têm deixado a sua marca na história deste torneio, contribuindo para a construção de rivalidades e momentos inesquecíveis.</p>
                 <p id="text" class="text-welcome hidden">Bem-vindo à UEFA Champions League, onde a história é escrita a cada temporada, onde os sonhos se tornam realidade e onde a magia do futebol nunca termina.</p>
-                <span id="btnHiddenText" class="font-bold text-light-blue-600 text-xl cursor-pointer pt-5">LER MAIS</span>
             </div>
+            <button id="btnHiddenText" class="font-bold text-light-blue-600 text-xl cursor-pointer pt-5">LER MAIS</button>
         </div>
+    </section>
+
+    <!-- LATEST NEWS -->
+    <section class="md:container flex flex-col justify-center items-center my-20">
+        <div class="text-center md:text-left w-full">
+            <h1 class="title">ÚLTIMAS NOTÍCIAS</h1>
+        </div>
+        <div class="flex flex-wrap justify-between items-start w-full">
+
+            <div class="card-latest-news">
+                <img src="src/img/card3.jpg" alt="">
+                <div class=" flex justify-between items-center w-full my-2">
+                    <h2 class="subtitle-card">TEMPORADA 22/23</h2>
+                    <p class="date-card">28/01/2004</p>
+                </div>
+                <p class="title-card">Vinícius JR se destaca na final</p>
+            </div>
+
+            <div class="card-latest-news">
+                <img src="src/img/card1.jpg" alt="Neymar comemora em jogo histórico">
+                <div class="flex justify-between items-center w-full my-2">
+                    <h2 class="subtitle-card">GRUPO A</h2>
+                    <p class="date-card">28/01/2004</p>
+                </div>
+                <p class="title-card">Em jogo histórico, Neymar faz 4 gols</p>
+            </div>
+
+            <div class="card-latest-news">
+                <img src="src/img/card2.jpg" alt="Cristiano Ronaldo quebra mais um recorde na Champions League">
+                <div class="flex justify-between items-center w-full my-2">
+                    <h2 class="subtitle-card">GRUPO B</h2>
+                    <p class="date-card">28/01/2004</p>
+                </div>
+                <p class="title-card">CR7 quebra mais um recorde</p>
+            </div>
+
+        </div>
+        <button class="button-latest-news">CARREGAR MAIS</button>
     </section>
 
     <!-- 
