feat: adição de novas imagens

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         <div class="flex flex-col sm:flex-row justify-center items-center w-full h-full sm:gap-x-4">
 
             <div class="container-team">
-                <p class="text-teams">Real Madrid</p>
-                <img class="size-teams" src="src/img/real-madrid.png" alt="Escudo do Real Madrid">
+                <p id="nomeTimeA" class="text-teams">Real Madrid</p>
+                <img id="imagemTimeA" class="size-teams" src="src/img/teams/real-madrid.png" alt="Escudo">
             </div>
 
             <div class="flex py-2 md:py-0">
@@ -92,8 +92,8 @@
             </div>
 
             <div class="container-team gap-x-1">
-                <img class="size-teams order-2 xs:order-1" src="src/img/barcelona.png" alt="Escudo do Barcelona">
-                <p class="text-teams order-1">Barcelona</p>
+                <img id="imagemTimeB" class="size-teams order-2 xs:order-1" src="src/img/teams/barcelona.png" alt="Escudo">
+                <p id="nomeTimeB" class="text-teams order-1">Barcelona</p>
             </div>
 
         </div>
