feat: imagem adiciona e começa do footer

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <section class="h-[200px]">
         <div class="flex flex-col sm:flex-row justify-center items-center w-full h-full sm:gap-x-4">
 
-            <div class="container-team">
+            <div class="container-team gap-x-1">
                 <p id="nomeTimeA" class="text-teams">Real Madrid</p>
                 <img id="imagemTimeA" class="size-teams" src="src/img/teams/real-madrid.png" alt="Escudo">
             </div>
@@ -152,6 +152,48 @@
         <button class="button-latest-news">CARREGAR MAIS</button>
     </section>
 
+    <!-- FOOTER -->
+    <footer class="flex flex-col bg-dark-blue-400 pt-20">
+
+        <div class="flex justify-center items-start">
+            <div class="container flex flex-wrap gap-x-[30%] mh:gap-x-48">
+
+                <div>
+                    <h4 class="text-white text-2xl font-semibold mb-8">IDIOMAS</h4>
+                    <ul>
+                        <li class="text-white mb-6 cursor-pointer">English</li>
+                        <li class="text-white mb-6 cursor-pointer">Français</li>
+                        <li class="text-white mb-6 cursor-pointer">Español</li>
+                        <li class="text-white mb-6 cursor-pointer">Português</li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h4 class="text-white text-2xl font-semibold mb-8">CONTATO</h4>
+                    <ul>
+                        <li class="text-white mb-6"><a href="https://iaugusto.vercel.app/" target="_blank" rel="noopener noreferrer">Portfólio</a></li>
+                        <li class="text-white mb-6"><a href="https://www.linkedin.com/in/igorbrz/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                        <li class="text-white mb-6"><a href="https://github.com/igoraugustobrz" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h4 class="text-white text-2xl font-semibold mb-8">CONTATO</h4>
+                    <ul>
+                        <li class="text-white mb-6"><a href="https://iaugusto.vercel.app/" target="_blank" rel="noopener noreferrer">Portfólio</a></li>
+                        <li class="text-white mb-6"><a href="https://www.linkedin.com/in/igorbrz/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                        <li class="text-white mb-6"><a href="https://github.com/igoraugustobrz" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="flex justify-center items-center bg-dark-blue-800 h-[60px]">
+            <p class="text-white">Copyrigtht © 2023 by Igor Augusto | All Rights Reserved</p>
+        </div>
+
+    </footer>
     <!-- 
         Dar os devidos créditos para os criadores dos Ícones
         <a href="https://www.flaticon.com/br/icones-gratis/barcelona" title="barcelona ícones">Barcelona ícones criados por Freepik - Flaticon</a> 
