--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="flex flex-wrap justify-between items-start w-full">
 
             <div class="card-latest-news">
-                <img src="src/img/card3.jpg" alt="">
+                <img src="src/img/cards/card3.jpg" alt="">
                 <div class=" flex justify-between items-center w-full my-2">
                     <h2 class="subtitle-card">TEMPORADA 22/23</h2>
                     <p class="date-card">28/01/2004</p>
@@ -131,7 +131,7 @@
             </div>
 
             <div class="card-latest-news">
-                <img src="src/img/card1.jpg" alt="Neymar comemora em jogo histórico">
+                <img src="src/img/cards/card1.jpg" alt="Neymar comemora em jogo histórico">
                 <div class="flex justify-between items-center w-full my-2">
                     <h2 class="subtitle-card">GRUPO A</h2>
                     <p class="date-card">28/01/2004</p>
@@ -140,7 +140,7 @@
             </div>
 
             <div class="card-latest-news">
-                <img src="src/img/card2.jpg" alt="Cristiano Ronaldo quebra mais um recorde na Champions League">
+                <img src="src/img/cards/card2.jpg" alt="Cristiano Ronaldo quebra mais um recorde">
                 <div class="flex justify-between items-center w-full my-2">
                     <h2 class="subtitle-card">GRUPO B</h2>
                     <p class="date-card">28/01/2004</p>
