--- a/index.html
+++ b/index.html
@@ -159,30 +159,21 @@
             <div class="container flex flex-wrap gap-x-[30%] mh:gap-x-48">
 
                 <div>
-                    <h4 class="text-white text-2xl font-semibold mb-8">IDIOMAS</h4>
+                    <h4 class="subtitle-footer">IDIOMAS</h4>
                     <ul>
-                        <li class="text-white mb-6 cursor-pointer">English</li>
-                        <li class="text-white mb-6 cursor-pointer">Français</li>
-                        <li class="text-white mb-6 cursor-pointer">Español</li>
-                        <li class="text-white mb-6 cursor-pointer">Português</li>
+                        <li class="item-footer cursor-pointer">English</li>
+                        <li class="item-footer cursor-pointer">Français</li>
+                        <li class="item-footer cursor-pointer">Español</li>
+                        <li class="item-footer cursor-pointer">Português</li>
                     </ul>
                 </div>
 
                 <div>
-                    <h4 class="text-white text-2xl font-semibold mb-8">CONTATO</h4>
+                    <h4 class="subtitle-footer">CONTATO</h4>
                     <ul>
-                        <li class="text-white mb-6"><a href="https://iaugusto.vercel.app/" target="_blank" rel="noopener noreferrer">Portfólio</a></li>
-                        <li class="text-white mb-6"><a href="https://www.linkedin.com/in/igorbrz/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-                        <li class="text-white mb-6"><a href="https://github.com/igoraugustobrz" target="_blank" rel="noopener noreferrer">GitHub</a></li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h4 class="text-white text-2xl font-semibold mb-8">CONTATO</h4>
-                    <ul>
-                        <li class="text-white mb-6"><a href="https://iaugusto.vercel.app/" target="_blank" rel="noopener noreferrer">Portfólio</a></li>
-                        <li class="text-white mb-6"><a href="https://www.linkedin.com/in/igorbrz/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-                        <li class="text-white mb-6"><a href="https://github.com/igoraugustobrz" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+                        <li class="item-footer"><a href="https://iaugusto.vercel.app/" target="_blank" rel="noopener noreferrer">Portfólio</a></li>
+                        <li class="item-footer"><a href="https://www.linkedin.com/in/igorbrz/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                        <li class="item-footer"><a href="https://github.com/igoraugustobrz" target="_blank" rel="noopener noreferrer">GitHub</a></li>
                     </ul>
                 </div>
 
@@ -190,14 +181,11 @@
         </div>
 
         <div class="flex justify-center items-center bg-dark-blue-800 h-[60px]">
-            <p class="text-white">Copyrigtht © 2023 by Igor Augusto | All Rights Reserved</p>
+            <p class="text-white text-center text-sm md:text-base">Copyrigtht © 2023 by Igor Augusto | All Rights Reserved</p>
         </div>
 
     </footer>
-    <!-- 
-        Dar os devidos créditos para os criadores dos Ícones
-        <a href="https://www.flaticon.com/br/icones-gratis/barcelona" title="barcelona ícones">Barcelona ícones criados por Freepik - Flaticon</a> 
-    -->
+
 </body>
 
 </html>
