feat: adicionada a funcionalidade do menu

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="src/css/style.css">
 
     <!-- JS -->
+    <script defer src="src/js/menu.js"></script>
     <script defer src="src/js/main.js"></script>
 
     <!-- Inclusão do Favicon -->
@@ -60,6 +61,15 @@
                             <div class="line-menu-18"></div>
                             <div class="line-menu-14"></div>
                         </div>
+                    </div>
+                </div>
+
+                <!-- Lista suspensa do Menu Mobile -->
+                <div id="list-menu" class="w-1/2 h-full right-0 top-[115px] fixed hidden z-10">
+                    <div id="animation" class="flex flex-col justify-start items-center bg-light-blue-600 rounded-xl h-full py-7">
+                        <a href="#formacoes" class="menu-text itens-menu">Formação</a>
+                        <a href="#experiencia" class="menu-text itens-menu">Experiência</a>
+                        <button class="menu-button itens-menu"><a href="#contato">Entrar em contato</a></button>
                     </div>
                 </div>
 
