style: lista suspensa do menu personalizada

--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@
                     </div>
                 </div>
 
-                <!-- Lista suspensa do Menu Mobile -->
-                <div id="list-menu" class="w-1/2 h-full right-0 top-[115px] fixed hidden z-10">
-                    <div id="animation" class="flex flex-col justify-start items-center bg-light-blue-600 rounded-xl h-full py-7">
-                        <a href="#formacoes" class="menu-text itens-menu">Formação</a>
-                        <a href="#experiencia" class="menu-text itens-menu">Experiência</a>
-                        <button class="menu-button itens-menu"><a href="#contato">Entrar em contato</a></button>
+                <!-- Lista suspensa do Menu -->
+                <div id="list-menu" class="w-[55%] h-full right-0 top-[115px] fixed hidden z-10">
+                    <div id="animation" class="flex flex-col justify-start items-center bg-dark-blue-800 rounded-xl h-full py-7">
+                        <a href="#" class="menu-text">Partidas</a>
+                        <a href="#" class="menu-text">Grupos</a>
+                        <a href="#" class="menu-text">História</a>
+                        <button class="button-menu"><a href="https://iaugusto.vercel.app/" target="_blank">Entrar em contato</a></button>
                     </div>
                 </div>
 
