--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 </head>
 
-<body class="font-inter">
+<body class="font-inter dark:bg-dark-mode">
 
     <main>
         <header class="header-background">
@@ -70,7 +70,7 @@
                         <a href="#" class="menu-text">Partidas</a>
                         <a href="#" class="menu-text">Grupos</a>
                         <a href="#" class="menu-text">História</a>
-                        <button class="button-menu"><a href="https://iaugusto.vercel.app/" target="_blank">Entrar em contato</a></button>
+                        <button class="button-menu"><a href="https://iaugusto.vercel.app/#contato" target="_blank">Entrar em contato</a></button>
                     </div>
                 </div>
 
@@ -98,7 +98,7 @@
 
             <div class="flex py-2 md:py-0">
                 <p class="size-scoreboard">7</p>
-                <span class="size-scoreboard text-neutral-700">-</span>
+                <span class="size-scoreboard text-neutral-700 dark:text-white">-</span>
                 <p class="size-scoreboard">0</p>
             </div>
 
@@ -126,39 +126,40 @@
     </section>
 
     <!-- LATEST NEWS -->
-    <section class="md:container flex flex-col justify-center items-center my-20">
-        <div class="text-center md:text-left w-full">
-            <h1 class="title">ÚLTIMAS NOTÍCIAS</h1>
-        </div>
-        <div class="flex flex-wrap justify-between items-start w-full">
-
-            <div class="card-latest-news">
-                <img src="src/img/cards/card3.jpg" alt="">
-                <div class=" flex justify-between items-center w-full my-2">
-                    <h2 class="subtitle-card">TEMPORADA 22/23</h2>
-                    <p class="date-card">28/01/2004</p>
-                </div>
-                <p class="title-card">Vinícius JR se destaca na final</p>
+    <section class="flex flex-col justify-center items-center py-20">
+        <div class="md:container">
+            <div class="text-center md:text-left w-full">
+                <h1 class="title">ÚLTIMAS NOTÍCIAS</h1>
             </div>
+            <div class="flex flex-wrap justify-between items-start w-full">
 
-            <div class="card-latest-news">
-                <img src="src/img/cards/card1.jpg" alt="Neymar comemora em jogo histórico">
-                <div class="flex justify-between items-center w-full my-2">
-                    <h2 class="subtitle-card">GRUPO A</h2>
-                    <p class="date-card">28/01/2004</p>
+                <div class="card-latest-news">
+                    <img src="src/img/cards/card3.jpg" alt="">
+                    <div class=" flex justify-between items-center w-full my-2">
+                        <h2 class="subtitle-card">TEMPORADA 22/23</h2>
+                        <p class="date-card">28/01/2004</p>
+                    </div>
+                    <p class="title-card">Vinícius JR se destaca na final</p>
                 </div>
-                <p class="title-card">Em jogo histórico, Neymar faz 4 gols</p>
-            </div>
 
-            <div class="card-latest-news">
-                <img src="src/img/cards/card2.jpg" alt="Cristiano Ronaldo quebra mais um recorde">
-                <div class="flex justify-between items-center w-full my-2">
-                    <h2 class="subtitle-card">GRUPO B</h2>
-                    <p class="date-card">28/01/2004</p>
+                <div class="card-latest-news">
+                    <img src="src/img/cards/card1.jpg" alt="Neymar comemora em jogo histórico">
+                    <div class="flex justify-between items-center w-full my-2">
+                        <h2 class="subtitle-card">GRUPO A</h2>
+                        <p class="date-card">28/01/2004</p>
+                    </div>
+                    <p class="title-card">Em jogo histórico, Neymar faz 4 gols</p>
                 </div>
-                <p class="title-card">CR7 quebra mais um recorde</p>
-            </div>
 
+                <div class="card-latest-news">
+                    <img src="src/img/cards/card2.jpg" alt="Cristiano Ronaldo quebra mais um recorde">
+                    <div class="flex justify-between items-center w-full my-2">
+                        <h2 class="subtitle-card">GRUPO B</h2>
+                        <p class="date-card">28/01/2004</p>
+                    </div>
+                    <p class="title-card">CR7 quebra mais um recorde</p>
+                </div>
+            </div>
         </div>
         <button class="button-latest-news">CARREGAR MAIS</button>
     </section>
