feat: funcionalidade de fechamento do menu por campo de visão adicionada

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                 <!-- Lista suspensa do Menu -->
                 <div id="list-menu" class="w-[55%] h-full right-0 top-[115px] fixed hidden z-10">
                     <div id="animation" class="flex flex-col justify-start items-center bg-dark-blue-800 rounded-xl h-full py-7">
-                        <a href="#" class="menu-text">Partidas</a>
-                        <a href="#" class="menu-text">Grupos</a>
-                        <a href="#" class="menu-text">História</a>
-                        <button class="button-menu"><a href="https://iaugusto.vercel.app/#contato" target="_blank">Entrar em contato</a></button>
+                        <a href="#partidas" class="menu-text itens-menu">Partidas</a>
+                        <a href="#grupos" class="menu-text itens-menu">Grupos</a>
+                        <a href="#historia" class="menu-text itens-menu">História</a>
+                        <button class="button-menu itens-menu"><a href="https://iaugusto.vercel.app/#contato" target="_blank">Entrar em contato</a></button>
                     </div>
                 </div>
 
